--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
+    "emailjs-com": "^2.4.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
