--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
     "emailjs-com": "^2.4.1",
     "vue": "^2.6.10",
+    "vue-owl-carousel2": "^2.0.7",
     "vue-router": "^3.1.3"
   },
   "browserslist": [
