--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "@trevoreyre/autocomplete-vue": "^2.1.0",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
     "emailjs-com": "^2.4.1",
