carousel added throughout

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap-vue": "^2.1.0",
     "emailjs-com": "^2.4.1",
     "vue": "^2.6.10",
+    "vue-esc": "^3.0.1",
     "vue-owl-carousel2": "^2.0.7",
     "vue-router": "^3.1.3"
   },
